chhange input title

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </div>
 
       <h2 class="section-title">Satu hal lagi... </h2>
-      <p class="section-sub">Isi dulu dong biar aku simpen</p>
+      <p class="section-sub">Isi dulu dong, nanti ada sesuatu hehe</p>
 
       <form id="valentineForm" class="valentine-form" onsubmit="handleFormSubmit(event)">
         <div class="form-group">
